[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.4"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/egraphics"

[workspace.dependencies]
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
gltf = "1.4.1"
gltf-json = "1.4.1"
nalgebra = "0.33.0"
