[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.8"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/egraphics"

[workspace.dependencies]
thiserror = "2.0.12"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
gltf = "1.4.1"
gltf-json = "1.4.1"
nalgebra = "0.34.0"
