[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.9"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/egraphics"

[workspace.dependencies]
thiserror = "2.0.17"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
gltf = "1.4.1"
gltf-json = "1.4.1"
nalgebra = "0.34.1"
