[package]
name = "egraphics-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for graphics data operations"

[dependencies]
egraphics-core = { version = "0.0.1-alpha.1", path = "../egraphics-core", registry = "custom" }
egraphics-io = { version = "0.0.1-alpha.1", path = "../egraphics-io", registry = "custom" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
