[package]
name = "egraphics-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for processing graphics formats in 3D space."

[dependencies]
egraphics-core = { version = "0.0.1-alpha.8", path = "../egraphics-core" }
egraphics-io = { version = "0.0.1-alpha.8", path = "../egraphics-io" }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
