[package]
name = "egraphics-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core of the egraphics library"


[dependencies]
nalgebra = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
