[package]
name = "egraphics-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core primitives and operations for processing graphics formats in 3D space."


[dependencies]
thiserror = { workspace = true }
nalgebra = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
