[package]
name = "egraphics-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IO related logic for the egraphics library"

[dependencies]
egraphics-core = { version = "0.0.1-alpha.1", path = "../egraphics-core", registry = "custom" }

thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
gltf = { workspace = true, features = ["names"] }
gltf-json = { workspace = true, features = ["names"] }
