[package]
name = "egraphics-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IO operations for processing graphics formats in 3D space."

[dependencies]
egraphics-core = { version = "0.0.1-alpha.8", path = "../egraphics-core" }

thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
gltf = { workspace = true, features = ["names"] }
gltf-json = { workspace = true, features = ["names"] }
