[package]
name = "egraphics"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for processing graphics formats"


[dependencies]
egraphics-core = { version = "0.0.1-alpha.1", path = "../egraphics-core", registry = "custom" }
egraphics-io = { version = "0.0.1-alpha.1", path = "../egraphics-io", registry = "custom" }
