[package]
name = "egraphics"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for processing graphics formats in 3D space."


[dependencies]
egraphics-core = { version = "0.0.1-alpha.3", path = "../egraphics-core" }
egraphics-io = { version = "0.0.1-alpha.3", path = "../egraphics-io" }
